--- a/ELE432_ver_1.1/ELE432.runs/impl_1/.vivado.begin.rst
+++ b/ELE432_ver_1.1/ELE432.runs/impl_1/.vivado.begin.rst
@@ -1,10 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="3900" HostCore="8" HostMemory="034222997504">
-    </Process>
-</ProcessHandle>
-<?xml version="1.0"?>
-<ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="860" HostCore="8" HostMemory="034222997504">
+    <Process Command="vivado.bat" Owner="samil" Host="DESKTOP-N21QB96" Pid="15300" HostCore="8" HostMemory="016804241408">
     </Process>
 </ProcessHandle>
