Last update to project

--- a/fpga_proect/fpga_proect.runs/impl_1/.vivado.begin.rst
+++ b/fpga_proect/fpga_proect.runs/impl_1/.vivado.begin.rst
@@ -1,15 +1,75 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="samil" Host="DESKTOP-N21QB96" Pid="11708" HostCore="8" HostMemory="016804241408">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="2556" HostCore="8" HostMemory="034222997504">
     </Process>
 </ProcessHandle>
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="samil" Host="DESKTOP-N21QB96" Pid="5944" HostCore="8" HostMemory="016804241408">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="3068" HostCore="8" HostMemory="034222997504">
     </Process>
 </ProcessHandle>
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="samil" Host="DESKTOP-N21QB96" Pid="2804" HostCore="8" HostMemory="016804241408">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="11024" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="14016" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="12316" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="11000" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="17448" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="12028" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="14236" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="19220" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="4464" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="3644" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="18500" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="18076" HostCore="8" HostMemory="034222997504">
+    </Process>
+</ProcessHandle>
+<?xml version="1.0"?>
+<ProcessHandle Version="1" Minor="0">
+    <Process Command="vivado.bat" Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="8132" HostCore="8" HostMemory="034222997504">
     </Process>
 </ProcessHandle>
