--- a/fpga_proect/fpga_proect.runs/impl_1/.init_design.begin.rst
+++ b/fpga_proect/fpga_proect.runs/impl_1/.init_design.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command=".planAhead." Owner="samil" Host="DESKTOP-N21QB96" Pid="10056">
+    <Process Command=".planAhead." Owner="ethem" Host="DESKTOP-T0BPI3M" Pid="12572">
     </Process>
 </ProcessHandle>
